fix sidemenu and spacing

--- a/static/css/auth.css
+++ b/static/css/auth.css
@@ -160,6 +160,10 @@
   transition: transform 0.6s ease-in-out;
 }
 
+.overlay-right img{
+  object-fit: cover;
+  width: 300px;
+}
 .container.right-panel-active .overlay {
   transform: translateX(50%);
 }
