--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,4 +1,4 @@
 nav{
-    color: whi;
+    color: white;
     background-color: #000066;
 }
