--- a/static/css/sidemenu.css
+++ b/static/css/sidemenu.css
@@ -1,6 +1,7 @@
 .menu{
   background-color: #000066;
-  height: 100%;
+  height: 92vh;
+  padding: 0px;
 }
 .menu .list-item a{
   color: rgb(255, 255, 255);
